RbA Build/src/objects/Discount_Tier__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <description>Percentage discount for this tier</description>
        <inlineHelpText>Enter the discount percentage</inlineHelpText>
        <label>Discount %</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Store_Discount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Store Discount</label>
        <referenceTo>Store_Discount__c</referenceTo>
        <relationshipLabel>Discount Tiers</relationshipLabel>
        <relationshipName>Discount_Tiers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier_Type__c</fullName>
        <description>Store Discount tier type</description>
        <formula>TEXT(Store_Discount__r.Tiered_Discount_Type__c)</formula>
        <inlineHelpText>Store Discount tier type</inlineHelpText>
        <label>Tier Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Units__c</fullName>
        <label>Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Discount Tier</label>
    <nameField>
        <label>Discount Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>StoreDiscount_Tiered_Type_Equals_NumUnit</fullName>
        <active>true</active>
        <description>If the tier type is # of Units total units is required</description>
        <errorConditionFormula>TEXT(Store_Discount__r.Tiered_Discount_Type__c) = &apos;# of Units&apos; &amp;&amp;(ISNULL(Total_Units__c) || Total_Units__c=0)</errorConditionFormula>
        <errorDisplayField>Total_Units__c</errorDisplayField>
        <errorMessage>Total Units is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StoreDiscount_Tiered_Type_Equals_Price</fullName>
        <active>true</active>
        <description>If the tier type is Total Price - total price is required</description>
        <errorConditionFormula>TEXT(Store_Discount__r.Tiered_Discount_Type__c) = &apos;Total Price&apos; &amp;&amp;(ISNULL(Total_Price__c ) || Total_Price__c = 0)</errorConditionFormula>
        <errorDisplayField>Total_Price__c</errorDisplayField>
        <errorMessage>Total Price is required</errorMessage>
    </validationRules>
</CustomObject>